bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:3: error: ')' expected but integer literal found.
  if ((temp1<0 && temp 2>100) || (temp1>100 && temp2<0)){
                       ^IcyHot:8: error: ')' expected but '}' found.
}
^